--- a/galleries/index.html
+++ b/galleries/index.html
@@ -88,7 +88,10 @@
 </ul></nav><h1>galleries</h1>
 
 <div id="gallery_container"></div>
-         <footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         </p>
+         <footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
+</p>
             
         </footer>
 </div>
