--- a/index.html
+++ b/index.html
@@ -219,7 +219,10 @@ also try this out with my newest adquisition, the Minilogue XD.</p>
 
 
 
-         <footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         </p>
+         <footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
+</p>
             
         </footer>
 </div>
