--- a/listings/index.html
+++ b/listings/index.html
@@ -85,7 +85,10 @@
 <a href="oscillator.cpp.html" class="listing-file">oscillator.cpp</a>
 </li>
 </ul>
-<footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         </p>
+<footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
+</p>
             
         </footer>
 </div>
