Nikola auto commit.
Source commit: c3fd9bc72d44cef7b991094715d447197aeaf6ef
Nikola version: 8.1.3

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@ for you to install in your Minilogue-XD, if you want to give it a spin.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Jk_0iMXm5BU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p> </p>
+<h4>Showcase</h4>
+<p>Here is a little demostration of the oscillator:</p>
+<p> </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MKZg9NXOtcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p> </p>
 <p>For reference, here are the features of version 1.1-0:</p>
 <h4>Features</h4>
 <ul>
