Nikola auto commit.
Source commit: 5d0b0bfeeabd9e394a5dcf2a1af226e9f93cb0c4
Nikola version: 8.1.3

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="images/waveforms.png#centerme" alt=""></p>
 <p>Sound synthesis is all about combining basic electrical waveforms and processing them through different modules or components in order to obtain an output that either emulates sounds found in physical instruments or make new sound effects or musical tones. The main synthesizer component in charge of generating the output signal is the <a href="https://en.wikipedia.org/wiki/Voltage-controlled_oscillator">Voltage Controlled Oscillator</a> (VCO). The most common generated signals in a synthesizer are sine, square, sawtooth and triangle. I wanted to make the excercise of analyzing these signals from the harmonics point of view, the visual aid is always useful if you want to understand exactly what a harmonic is.</p>
 <h4 id="Signals-and-Harmonics">Signals and Harmonics<a class="anchor-link" href="posts/music-synthesis-wave-analysis-with-python/#Signals-and-Harmonics">¶</a>
 </h4>
