Nikola auto commit.
Source commit: 7f6de993b70944e7910af3204f2c217dc00eb5b0
Nikola version: 8.2.4

--- a/listings/oscillator.cpp.html
+++ b/listings/oscillator.cpp.html
@@ -91,36 +91,36 @@
     <div class="code"><table class="codetable">
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-1"><code data-line-number="1"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-1"></a><span class="k">const</span> <span class="kt">float</span> <span class="n">w1</span> <span class="o">=</span> <span class="n">osc_w0f_for_note</span><span class="p">(((</span><span class="n">params</span><span class="o">-&gt;</span><span class="n">pitch</span><span class="p">)</span><span class="o">&gt;&gt;</span><span class="mi">8</span><span class="p">)</span> <span class="o">+</span> <span class="n">oscillator</span><span class="p">.</span><span class="n">semitone</span><span class="p">,</span> <span class="n">params</span><span class="o">-&gt;</span><span class="n">pitch</span> <span class="o">&amp;</span> <span class="mh">0xFF</span><span class="p">);</span>
+<td class="code"><code><a id="listingsoscillatorcpp-1" name="listingsoscillatorcpp-1"></a><span class="k">const</span><span class="w"> </span><span class="kt">float</span><span class="w"> </span><span class="n">w1</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">osc_w0f_for_note</span><span class="p">(((</span><span class="n">params</span><span class="o">-&gt;</span><span class="n">pitch</span><span class="p">)</span><span class="o">&gt;&gt;</span><span class="mi">8</span><span class="p">)</span><span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="n">oscillator</span><span class="p">.</span><span class="n">semitone</span><span class="p">,</span><span class="w"> </span><span class="n">params</span><span class="o">-&gt;</span><span class="n">pitch</span><span class="w"> </span><span class="o">&amp;</span><span class="w"> </span><span class="mh">0xFF</span><span class="p">);</span>
 </code></td>
 </tr>
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-2"><code data-line-number="2"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-2"></a>
+<td class="code"><code><a id="listingsoscillatorcpp-2" name="listingsoscillatorcpp-2"></a>
 </code></td>
 </tr>
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-3"><code data-line-number="3"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-3"></a><span class="p">...</span>
+<td class="code"><code><a id="listingsoscillatorcpp-3" name="listingsoscillatorcpp-3"></a><span class="p">...</span>
 </code></td>
 </tr>
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-4"><code data-line-number="4"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-4"></a>
+<td class="code"><code><a id="listingsoscillatorcpp-4" name="listingsoscillatorcpp-4"></a>
 </code></td>
 </tr>
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-5"><code data-line-number="5"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-5"></a><span class="n">sw1</span> <span class="o">=</span> <span class="n">w1</span> <span class="o">/</span> <span class="n">oscillator</span><span class="p">.</span><span class="n">undertone1</span><span class="p">;</span>
+<td class="code"><code><a id="listingsoscillatorcpp-5" name="listingsoscillatorcpp-5"></a><span class="n">sw1</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">w1</span><span class="w"> </span><span class="o">/</span><span class="w"> </span><span class="n">oscillator</span><span class="p">.</span><span class="n">undertone1</span><span class="p">;</span>
 </code></td>
 </tr>
 <tr>
 <td class="linenos linenodiv"><a href="#listingsoscillatorcpp-6"><code data-line-number="6"></code></a></td>
-<td class="code"><code><a name="listingsoscillatorcpp-6"></a><span class="n">sw2</span> <span class="o">=</span> <span class="n">w1</span> <span class="o">/</span> <span class="n">oscillator</span><span class="p">.</span><span class="n">undertone2</span><span class="p">;</span>
+<td class="code"><code><a id="listingsoscillatorcpp-6" name="listingsoscillatorcpp-6"></a><span class="n">sw2</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="n">w1</span><span class="w"> </span><span class="o">/</span><span class="w"> </span><span class="n">oscillator</span><span class="p">.</span><span class="n">undertone2</span><span class="p">;</span>
 </code></td>
 </tr>
 </table></div>
-         <footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         
+         <footer id="footer"><p>Contents © 2023         <a href="https://github.com/leandrob13">Leandro B</a> -         
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
 </p>
