--- a/archive.html
+++ b/archive.html
@@ -83,10 +83,16 @@
 
 	</section><section class="page-content"><div class="content" rel="main">
 <article class="listpage"><header><h1>Archive</h1>
-    </header><ul class="postlist"><li>
+    </header><ul class="postlist">
+<li>
+<a href="2023/">2023</a>
+            (1)
+        </li>
+<li>
 <a href="2021/">2021</a>
-            (5)
-    </li></ul></article><footer id="footer"><p>Contents © 2021         <a href="https://github.com/leandrob13">Leandro B</a> -         
+            (4)
+    </li>
+</ul></article><footer id="footer"><p>Contents © 2023         <a href="https://github.com/leandrob13">Leandro B</a> -         
 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
 </p>
