Nikola auto commit.
Source commit: 7f6de993b70944e7910af3204f2c217dc00eb5b0
Nikola version: 8.2.4

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 </li>
 <li>Reverbs: added 4 reverbs based on the implementations found in Rings, Clouds and Elements.</li>
 </ul>
+<p>Here is a demo overview of the new effects:</p>
+<p> </p>
+<p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/FZFHOwKZnD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+<p> </p>
 <h3>Contents</h3>
 <ul>
 <li><a href="posts/warps-symbiote/#installation">Installation</a></li>
@@ -117,7 +121,7 @@
 <ul>
 <li>Ladder Filter.</li>
 <li>Dual State Variable Filter.</li>
-<li>Reberbs.</li>
+<li>Reverbs.</li>
 <li>Chebyschev Waveshaper.</li>
 <li>Frequency Shifter.</li>
 <li>Bitcrusher.</li>
@@ -181,10 +185,10 @@ The four available reverbs are:</p>
 <td>Filter 2 output</td>
 </tr>
 <tr>
-<td>Reberbs</td>
+<td>Reverbs</td>
 <td>Diffussion</td>
 <td>Reverb time</td>
-<td>Selects reberbs: Caveman (unlit), Rings (green), Clouds (yellow), Elements (red)</td>
+<td>Selects reverbs: Caveman (unlit), Rings (green), Clouds (yellow), Elements (red)</td>
 <td>Reverb amount, reverb gain for Elements</td>
 <td>Filter LP filter, feedback for Clouds</td>
 <td>Inputs 1&amp;2 VCA CV control</td>
