Nikola auto commit.
Source commit: dac3810ec91a79b1b92e53b56fc04bf1b5f88b0d
Nikola version: 8.2.4

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <li>Chebyschev Waveshaper.</li>
 <li>Frequency Shifter.</li>
 <li>Bitcrusher.</li>
-<li>Vocoder.</li>
+<li>Doppler Panner.</li>
 <li>Delay.</li>
 <li>Meta</li>
 </ul>
