Nikola auto commit.
Source commit: 5305790902f749971209e142f012680304d186b7
Nikola version: 8.2.4

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta charset="utf-8">
 <title>Redirecting...</title>
 <meta name="robots" content="noindex">
-<meta http-equiv="refresh" content="0; url=/blog">
+<meta http-equiv="refresh" content="0; url=blog">
 </head>
 <body>
-<p>Page moved <a href="/blog">here</a>.</p>
+<p>Page moved <a href="blog">here</a>.</p>
 </body></html>
